# react-actix-template

./: .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: Cargo.toml
apps/backend/migrations/: 20250627121047_init.up.sql  20250627122506_create_refresh_tokens_table.up.sql
apps/backend/src/: main.rs
apps/backend/src/models/: user.rs
apps/backend/src/routes/: index.rs  mod.rs
apps/backend/src/routes/v1/: mod.rs
apps/backend/src/routes/v1/auth/: login.rs  logout.rs  mod.rs  register.rs
apps/backend/src/routes/v1/user/: me.rs  mod.rs
apps/backend/src/utils/: error.rs
apps/backend/src/utils/auth/: jwt.rs
apps/frontend/: next.config.ts  package.json  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx
apps/frontend/src/app/api/auth/login/: route.ts
apps/frontend/src/app/api/auth/logout/: route.ts
apps/frontend/src/app/api/auth/register/: route.ts
apps/frontend/src/app/api/user/me/: route.ts
apps/frontend/src/app/auth/login/: page.tsx
apps/frontend/src/app/auth/register/: page.tsx
apps/frontend/src/components/: Button.tsx  Navbar.tsx
apps/frontend/src/components/Form/: Form.tsx  FormButton.tsx  FormContext.ts  FormInput.tsx  FormValidation.tsx
apps/frontend/src/components/Icons/: DropdownArrow.tsx
apps/frontend/src/components/Navbar/: DropdownMenu.tsx  Navbar.tsx
apps/frontend/src/context/: UserContext.tsx
apps/frontend/src/utils/: fetch.ts
