[package]
name = "backend"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4", features = ["rustls-0_23"]}
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "derive", "chrono", "runtime-tokio"] }
thiserror = "2.0.12"
ts-rs = "11.0.1"
types = { path = "../../packages/types" }
rustls = "0.23"
rustls-pemfile = "1.0"

[dev-dependencies]
cargo-watch = "8.5.3"
